[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "appstoreconnect-analyticreport"
version = "0.0.1"
description = "Convenient interface to **download Analytics Reports** from the [App Store Connect API](https://developer.apple.com/documentation/appstoreconnectapi). It handles authentication using JWT, manages requests, and retrieves analytics data for app usage, sales, crashes, and more."
readme = "README.md"
dependencies = [
    "PyJWT>=2.10.1,<3.0",
    "requests>=2.32.4,<3.0",
    "cryptography>=45.0.5,<46.0",
]


[project.optional-dependencies]
test = [
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
]

